Changelog for z3c.testsetup
***************************

0.8 (unreleased)
================

- Nothing changed yet.


0.7 (2010-05-17)
================

- Fix NameError bug in the warning message in case zope.app.testing is not
  availble when trying to run a functional doc test. This error presented
  itself as a highly cryptic ImportError when actually running tests.

0.6.1 (2009-11-19)
==================

- Test files that we attempt to read but that do not exist raise an error
  instead of passing silently.

- Internal refactoring: regex caching.

0.6 (2009-11-19)
================

- Python unittest modules with an import error now result in a visible
  warning.  Previously, such problems would be hidden.  Also the python
  testrunner could not report them as broken as we did not pass those test
  files to the testrunner.

- Fixed regex for detecting the old ":test-layer: python" marker: it did not
  work when prefixed with restructuredtext's ".." comment marker.

0.5.1 (2009-10-22)
==================

* Reverted allow_teardown default back to False to prevent confusion.

0.5 (2009-09-23)
================

Bug fixes
---------

* Checkers are now applied to non-functional doctests too. Thanks to
  Jonathan Ballet for patches.

* Normal UnitTest layers are now registered correctly.

* ``:layer:`` now detects functional ZCML layers. If the defined layer is
  derived from `zope.testing.functional.ZCMLLayer`, then the test is
  set up with the same kind of testcase as ``:functional-zcml-layer:``.

* Reordered and cleaned up the documentation.

Feature changes
---------------

* By default, functional layer tests now use the allow_teardown=True option of
  the ZCMLLayer.  This prevents the zcml layer from running in a subprocess
  which throws off profiling and thus code coverage tools.  Running it in a
  subprocess is only normally needed when you do things like adding an
  interface to a class after the fact in your code.  You can overrid it in the